追加メンバー

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,18 @@
     {
       "name": "ribnil",
       "role": "Support Developer"
+    },
+    {
+      "name": "xtakumatutix",
+      "role": "Support Developer"
+    },
+    {
+      "name": "TATCHAN0825",
+      "role": "Support Developer"
+    },
+    {
+      "name": "soradore",
+      "role": "Support Developer"
     }
   ],
   "require": {
